@@ -1,3 +1,4 @@
+3/28/12 add test spinner for changing intercept
 3/28/12 disable "Save Line" button until the line has been changed
 3/28/12 add intermediate nodes to maintain rendering order for interactive, standard and saved lines
 3/28/12 add interactive line to graph
